--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -266,7 +266,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/learnCard"
+                    android:id="@+id/myNetwork"
                     android:layout_width="128dp"
                     android:layout_height="128dp"
                     android:layout_margin="8dp"
