--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -16,8 +16,8 @@ app:cardPreventCornerOverlap="false">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:padding="2dp" />
 
     <TextView
@@ -36,7 +36,8 @@ app:cardPreventCornerOverlap="false">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/imageView"
         android:text="Line 2"
         android:textSize="15sp" />
