--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,5 +8,13 @@
         <item name="android:background">@color/colorBGshape</item>
         <item name="android:colorAccent">@color/colorAccent</item>
     </style>
+    <style name="MyFeedbackDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/colorPrimary</item>
+        <item name="android:headerDividersEnabled">true</item>
+        <item name="android:typeface">normal</item>
+        <item name="textColorAlertDialogListItem">@color/colorPrimary</item>
+
+    </style>
 
 </resources>
