--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -484,6 +484,62 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                 app:layout_constraintVertical_bias="0.94" />
 
+        <!--Action name text for the add person button-->
+        <!--Make sure that you are constraining this Text
+            to the add Person FAB button-->
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_platform_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1000dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginBottom="48dp"
+
+            android:backgroundTint="#009688"
+            android:contentDescription="@string/app_name"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/add_fab"
+            app:layout_constraintHorizontal_bias="0.762"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_platform"
+            app:tint="@color/colorBackground" />
+
+        <TextView
+            android:id="@+id/add_platform_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Platform"
+            app:layout_constraintStart_toStartOf="@+id/add_platform_fab"
+            app:layout_constraintEnd_toEndOf="@+id/add_platform_fab"
+            app:layout_constraintTop_toBottomOf="@+id/add_platform_fab" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_room_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="48dp"
+            android:backgroundTint="#009688"
+            android:contentDescription="@string/app_name"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/add_fab"
+            app:layout_constraintHorizontal_bias="0.71"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_baseline_room_preferences_24"
+            app:tint="@color/colorBackground" />
+
+        <TextView
+            android:id="@+id/add_room_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Room"
+            app:layout_constraintStart_toStartOf="@+id/add_room_fab"
+            app:layout_constraintEnd_toEndOf="@+id/add_room_fab"
+            app:layout_constraintTop_toBottomOf="@+id/add_room_fab" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
