--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -495,7 +495,6 @@
             android:layout_marginStart="1000dp"
             android:layout_marginEnd="80dp"
             android:layout_marginBottom="48dp"
-
             android:backgroundTint="#009688"
             android:contentDescription="@string/app_name"
             app:fabSize="normal"
@@ -511,6 +510,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Platform"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/add_platform_fab"
             app:layout_constraintEnd_toEndOf="@+id/add_platform_fab"
             app:layout_constraintTop_toBottomOf="@+id/add_platform_fab" />
@@ -535,8 +535,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Room"
-            app:layout_constraintStart_toStartOf="@+id/add_room_fab"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/add_room_fab"
+            app:layout_constraintStart_toStartOf="@+id/add_room_fab"
             app:layout_constraintTop_toBottomOf="@+id/add_room_fab" />
 
 
