--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -16,5 +16,10 @@
         <item name="textColorAlertDialogListItem">@color/colorPrimary</item>
 
     </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 
 </resources>
