--- a/app/src/main/res/layout/activity_complete_overview.xml
+++ b/app/src/main/res/layout/activity_complete_overview.xml
@@ -50,7 +50,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/logOutB"
+            android:id="@+id/feedbackB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
