--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -42,6 +42,19 @@ app:cardPreventCornerOverlap="false">
         android:text="Line 2"
         android:textSize="15sp" />
 
+    <ImageView
+        android:id="@+id/imageViewDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="@color/colorBackground"
+        android:tint="#B30808"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
+
 </RelativeLayout>
 
 
