--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -32,6 +32,15 @@
             android:visibility="gone"
             android:text="No data available."
             android:textSize="25sp" />
+        <ProgressBar
+            android:id="@+id/loading2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+             />
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
