--- a/app/src/main/res/layout/activity_complete_overview.xml
+++ b/app/src/main/res/layout/activity_complete_overview.xml
@@ -133,7 +133,7 @@
                     android:layout_marginBottom="4dp"
                     android:layout_toEndOf="@+id/imageView"
                     android:gravity="center_vertical"
-                    android:text="1.2 clo"
+                    android:text="ND clo"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -182,7 +182,7 @@
                     android:layout_marginBottom="4dp"
                     android:layout_toEndOf="@+id/imageView"
                     android:gravity="center_vertical"
-                    android:text="1.2 met"
+                    android:text="ND met"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -242,7 +242,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_marginTop="12dp"
                         android:gravity="center_vertical"
-                        android:text="0.5"
+                        android:text="ND"
                         android:textColor="@color/colorAccent"
                         android:textSize="38sp"
                         android:textStyle="bold"
@@ -319,7 +319,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:gravity="center_vertical"
-                        android:text="20%"
+                        android:text="ND"
                         android:textColor="#FF5722"
                         android:textSize="23sp"
                         android:textStyle="bold"
